# ToDoManager

./: .gitignore  CMakeLists.txt  THIRD_PARTY.md
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
include/: AddTaskWindow.h  JsonHandler.h  MainWindow.h
src/: AddTaskWindow.cpp  JsonHandler.cpp  MainWindow.cpp  main.cpp
src/ui/: AddTaskWindow.ui  MainWindow.ui
